syntax = "proto3";

option csharp_namespace = "homectl.Protocol.Server.Host";

package homectl;

service Controllers {
	//  Attempts to set the specified device spec changes.
	rpc ApplyDeviceSpec (ApplyDeviceSpecRequest) returns (ApplyDeviceSpecResponse);
}

message ApplyDeviceSpecRequest {
}

message ApplyDeviceSpecResponse {
}